# plonk_verifier_on_icp

./: Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json
examples/: go.mod  go.sum
examples/cubic/: cubic.go  cubic_test.go  main.go
examples/cubic/test_data/: cubic.proof  cubic.vk  cubic_uncompressed.proof
examples/hasher/: hasher.go  main.go
examples/hasher/test_data/: hasher.proof  hasher.vk  hasher.wtns  hasher_uncompressed.proof
examples/mimc/: main.go  mimc.go
src/plonk_verifier_on_icp_backend/: Cargo.toml  plonk_verifier_on_icp_backend.did
src/plonk_verifier_on_icp_backend/src/: fiat_shamir.rs  fr.rs  hash_to_field.rs  lib.rs  point.rs  proof.rs  verifier.rs  vk.rs  witness.rs
src/plonk_verifier_on_icp_backend/src/test_data/: cubic.vk  cubic_compressed_proof.proof  cubic_uncompressed.proof  redeem_beta1.vk  redeem_beta1_wo_lines.vk
src/plonk_verifier_on_icp_backend/src/test_data/cubic/: cubic.vk  cubic_compressed.proof  cubic_uncompressed.proof
src/plonk_verifier_on_icp_backend/src/test_data/hasher/: hasher.vk  hasher.wtns  hasher_compressed.proof  hasher_uncompressed.proof
src/plonk_verifier_on_icp_backend/src/test_data/mimc/: mimc.vk  mimc.wtns  mimc_compressed.proof  mimc_uncompressed.proof
