[package]
name = "plonk_verifier_on_icp_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
sha2 = { version = "0.10.8" }
digest = { version = "0.10.7" }
ark-ff =  { version = "0.4.2", default-features = false }
ark-serialize = { version = "0.4.2", features = ["derive"] }
ark-std = { version ="0.4.0"}
ark-ec = { version = "0.4.2", features = ["parallel"] }
ark-bn254 = { version = "0.4.0", features = ["curve"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
hex = "0.4.3"